--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>
                     <a href="#lightbox">
                         <div class="sprite"></div>
-                        <div class="red_bumper"></div>
+                        <div class="blue_bumper"></div>
                         <h5>Brazil</h5>
                     </a>
                     <!-- <img src="images/cap.jpeg" alt="captain america"> -->
@@ -33,8 +33,8 @@
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="carol"></div>
-                        <div class="red_bumper"></div>
+                        <div class="sprite" id="iran"></div>
+                        <div class="green_bumper"></div>
                         <h5>Iran</h5>
                     </a>
                     <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
@@ -42,7 +42,7 @@
 
                 <li>
                     <a href="#lightbox">
-                    <div class="sprite" id="clint"></div>
+                    <div class="sprite" id="portugal"></div>
                     <div class="red_bumper"></div>
                     <h5>Portugal</h5>
                 </a>
@@ -51,8 +51,8 @@
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="hulk"></div>
-                        <div class="red_bumper"></div>
+                        <div class="sprite" id="spain"></div>
+                        <div class="yellow_bumper"></div>
                         <h5>Spain</h5>
                     </a>
                     <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
