--- a/index.html
+++ b/index.html
@@ -28,40 +28,36 @@
                         <div class="red_bumper"></div>
                         <h5>Brazil</h5>
                     </a>
-                    <!-- <img src="images/cap.jpeg" alt="captain america"> -->
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox2">
                         <div class="sprite" id="carol"></div>
                         <div class="red_bumper"></div>
                         <h5>Iran</h5>
                     </a>
-                    <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox3">
                     <div class="sprite" id="clint"></div>
                     <div class="red_bumper"></div>
                     <h5>Portugal</h5>
                 </a>
-                    <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox4">
                         <div class="sprite" id="hulk"></div>
                         <div class="red_bumper"></div>
                         <h5>Spain</h5>
                     </a>
-                    <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
                 </li>
             </ul>
         </nav>
 
         <article>
-            <h3>Support Our Teams!</h3>
+            <h3>Support The Teams!</h3>
             <p>Choose your country to learn more about their World Cup journey.</p>
         </article>
 
@@ -78,17 +74,59 @@
         <!-- hero image on the left, text on the right -->
         <!-- her image is a background image -->
         <article>
-            <h3 class="lb_heading">Update This</h3>
+            <h3 class="lb_heading">Brazil</h3>
             <p class="lb_text">
-                UPDATE THIS
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum autem pariatur dicta eum dolorum nulla neque laborum praesentium quo possimus, mollitia, dolor omnis rerum dolorem ratione in natus? Nihil, mollitia!
+                Brazil face Switzerland in their second match of Group G at the World Cup. The five-time world champions won their opening match 2-0 against Serbia thanks to a brace from Tottenham Hotspur forward Richarlison. 
             </p>
             <p class="lb_text">
-                UPDATE THIS
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quaerat totam, unde quam aspernatur quasi delectus sed earum nobis voluptate voluptas suscipit repudiandae explicabo placeat numquam error. Praesentium, quisquam illum.
+                Switzerland, meanwhile, beat Cameroon 1-0 in their opening game. Both sides will be looking to pick up all three points to progress to the knockouts.
             </p>
         </article>
     </section>
+
+    <section class="lightbox" id="lightbox2">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Iran</h3>
+            <p class="lb_text">
+                After a brutal 6-2 loss in its opener against England, Iran bounced back to beat Wales, 2-0, scoring both goals in extra time. Iran has never made it past the group stage in a World Cup but is now in a position to do just that. 
+            </p>
+            <p class="lb_text">
+                A win against the U.S. would be enough for the Iranians to advance. Even a draw might be enough. Iran would advance with a draw unless Wales defeated England. 
+            </p>
+        </article>
+    </section>
+    <section class="lightbox" id="lightbox3">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Portugal</h3>
+            <p class="lb_text">
+                After a scoreless first half in its opening match against Ghana, Portugal scored a flurry of goals in a 15-minute span to win, 3-2. It now sits atop Group H and is on track to advance. It faces Uruguay next. 
+            </p>
+            <p class="lb_text">
+                All eyes were on Portugal’s Cristiano Ronaldo as he made his debut in Qatar just two days after his public breakup with Manchester United, and he marked the occasion by making history. 
+            </p>
+        </article>
+    </section>
+    <section class="lightbox" id="lightbox4">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Spain</h3>
+            <p class="lb_text">
+                Sunday's day at the 2022 FIFA World Cup was a fun one, and it ended with a tense contest between Spain and Germany that finished in a 1-1 tie Earlier, Costa Rica beat Japan in a Group E battle, while Morocco beat Belgium and Croatia beat Canada in a pair of Group F matches.
+            </p>
+            <p class="lb_text">
+                Alvaro Morata made the breakthrough for Spain but Fullkrug's thumping finish salvaged a point. It all comes down to Thursday's finale — if Germany beat Costa Rica, and Japan lose to Spain, Germany will qualify automatically. See all the permutations here.
+            </p>
+        </article>
+    </section>
+
 </body>
 
 </html>
