--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <a href="#lightbox2">
                         <div class="sprite" id="iran"></div>
                         <div class="green_bumper"></div>
+                        <h5>Iran</h5>
                     </a>
                 </li>
 
