--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <nav id="character-nav">
             <ul class="characters">
                 <li>
+                    <input type="checkbox"><span></span>
                     <a href="#lightbox">
                         <div class="sprite"></div>
                         <div class="blue_bumper"></div>
@@ -31,6 +32,7 @@
                 </li>
 
                 <li>
+                    <input type="checkbox"><span></span>
                     <a href="#lightbox2">
                         <div class="sprite" id="iran"></div>
                         <div class="green_bumper"></div>
@@ -39,6 +41,7 @@
                 </li>
 
                 <li>
+                    <input type="checkbox"><span></span>
                     <a href="#lightbox3">
                         <div class="sprite" id="portugal"></div>
                         <div class="red_bumper"></div>
@@ -47,6 +50,7 @@
                 </li>
                 
                 <li>
+                    <input type="checkbox"><span></span>
                     <a href="#lightbox4">
                         <div class="sprite" id="spain"></div>
                         <div class="yellow_bumper"></div>
