--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvel Characters Team Page</title>
+    <title>World Cup Team Page</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1 class="hidden">All About the Team</h1>
-        <img id="main-logo" src="images/logo.svg" alt="avengers logo">
+        <img id="main-logo" src="images/logo.svg" alt="fifa logo">
     </header>
 
     <main>
@@ -63,6 +63,8 @@
         <article>
             <h3>Support The Teams!</h3>
             <p>Choose your country to learn more about their World Cup journey.</p>
+            <br>
+            <p>Click the checkbox to vote for your favourite World Cup Team!</p>
         </article>
 
         <section class="lightbox"></section>
